added section on type selectors in the selectors tutorial

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,3 +1,8 @@
 code {
-  white-space : pre-wrap !important;
+  white-space: pre-wrap !important;
 }
+
+img.screenshots {
+    margin-top: 18px;
+}
+
